@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-13 Gal
+ BUG: [ 1538340 ] Undo enabled for folder compare.
+  Src: DirView.h DirView.cpp
+
 2006-08-13 Takashi
  Japanese translation - update
   Src/Languages/Japanese/MergeJapanese.rc
